ChangeLog file for Endian libencloud

next:
	- vpn: allow timeout=0 (no timer)
	- etc: default verbosity=7 for ECE/SECE
	- ECE: fix compilation error in http/handler1.ccp;
	  handle PoI from cert CN (no longer required as separate file)
	- SECE: fix compilation error in core (header not included)
	- defaults: LIBENCLOUD_DATA_PREFIX is /var/lib/encloud if !LIBENCLOUD_ENDIAN
	- client: avoid errors when certificate verification is off
	- build: when building from sratch remove only files ignored by git
	  (so local files such as .qmake.pri are kept)

libencloud 0.7.5 (01/12/2014):
	- [CONNECT-188] Problems with fallback configuration

libencloud 0.7.4 (11/11/2014):
	- [CONNECT-178] Updates always available even if client is updated
	- [CONNECT-176] Error message gets stuck between states of the application
	- core: fix watchdog not being restarted upon reconnect

libencloud 0.7.3 (29/10/2014):
	- [CONNECT-169] Rename to Endian Connect App and Endian Connect Service
	- [CONNECT-149] Connect App sets up routes belonging to previous connection

libencloud 0.7.2 (15/10/2014):
	- [CONNECT-165] Tell OpenVPN not to cache passwords in memory
	- [CONNECT-152] Logging improvements and verbosity handling

libencloud 0.7.1 (17/09/2014):
	- #77 fixed tap rename issue (net.sh not found) and make install issue
	  (file used by another application)

libencloud 0.7 (19/08/2014):
	- [CONNECT-131] Certificate-based VPN authentication
	- [CONNECT-144] renaming: modeqic => modeqcc, qic => qcc,
	  4iconnect => ConnectClient
	- api: new Config API (json); rename '/api_v1' => '/api/v1'; 
	  extra path parameter for x509 auth
	- client: new get(), post() functions, improved handling of Switchboard errors
	- utils: interface is now public
	- crypto: interface is now public, added new functions configFromAuth, 
	  certToString(), p12SaveCa(), p12SaveCert(), p12SaveKey()
	- config: "init"/"op" under new "ssl" key, handle absolute and relative paths